@@ -1,0 +1,3 @@
+<script type="text/javascript">
+    new zeit.cms.LightboxForm(window.context_url + '/@@publish.html');
+</script>
